--- a/styles/global.css
+++ b/styles/global.css
@@ -52,3 +52,27 @@ footer {
     justify-content: flex-end;
     background-color: var(--footer-background);
 }
+
+h1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 50px;
+    border: 2px solid black;
+    width: 100%;
+    height: 35%;
+}
+    .neon {
+        color: #fff;
+        text-shadow:
+        0 0 5px #fff,
+        0 0 10px #fff,
+        0 0 20px #fff,
+        0 0 40px #0ff,
+        0 0 80px #0ff,
+        0 0 90px #0ff,
+        0 0 100px #0ff,
+        0 0 150px #0ff;
+    }
+
+
