--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,10 @@ body {
     background: var(--background);
     display: grid;
     grid-template-rows: auto 1fr auto;
+    background-image: url("../assets/grocery-store.PNG");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
 }
 
 .page-header {
@@ -58,9 +62,9 @@ h1 {
     flex-direction: row;
     justify-content: center;
     margin-bottom: 50px;
-    border: 2px solid black;
-    width: 100%;
-    height: 35%;
+    border: 3px solid black;
+    border-width: 1em;
+    background-color: black;
 }
     .neon {
         color: #fff;
@@ -76,3 +80,28 @@ h1 {
     }
 
 
+h2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color:#0ff
+}
+
+.shopping-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #0ff;
+    color: #fff;
+    text-shadow:
+    0 0 5px #fff,
+    0 0 10px #fff,
+    0 0 20px #fff,
+    0 0 40px #0ff,
+    0 0 80px #0ff,
+    0 0 90px #0ff,
+    0 0 100px #0ff,
+    0 0 150px #0ff;
+    font-size: 25px;
+}
