--- a/styles/global.css
+++ b/styles/global.css
@@ -62,10 +62,48 @@ h1 {
     flex-direction: row;
     justify-content: center;
     margin-bottom: 50px;
-    border: 3px solid black;
     border-width: 1em;
-    background-color: black;
+    background-color: black, transparent;
+    
 }
+
+.h1-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    border-width: 1em;
+    background-color: black,;
+
+    
+    text-transform: uppercase;
+    animation: flick 12s ease-in infinite;
+    text-shadow: none;
+}
+
+@keyframes flick {
+
+    0%,
+    20%,
+    40%,
+    60%,
+    80%,
+    100% {
+    opacity: 1;
+    text-shadow: -1px -1px 0 #ededed;
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90%,
+    95% {
+    opacity: 0.5;
+    text-shadow: none;
+    }
+}
+
+
     .neon {
         color: #fff;
         text-shadow:
@@ -84,7 +122,18 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    color:#0ff
+    color: rgb(249, 249, 249);
+    text-shadow:
+    0 0 5px #fff,
+    0 0 10px #fff,
+    0 0 20px #fff,
+    0 0 40px rgb(221, 2, 250),
+    0 0 80px rgb(221, 2, 250),
+    0 0 90px rgb(221, 2, 250),
+    0 0 100px rgb(221, 2, 250),
+    0 0 150px rgb(221, 2, 250);
+    font-size: 50px;
+    background-color: transparent;
 }
 
 .shopping-list {
@@ -92,7 +141,11 @@ h2 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid #0ff;
+    background-color: transparent;
+    
+
+    
+
     color: #fff;
     text-shadow:
     0 0 5px #fff,
@@ -104,4 +157,41 @@ h2 {
     0 0 100px #0ff,
     0 0 150px #0ff;
     font-size: 25px;
+}
+
+.delete-button-container {
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+    
+}
+
+.delete {
+    font-size: 2rem;;
+    color: #0ff;
+    text-shadow:
+    0 0 5px #fff,
+    0 0 10px #fff,
+    0 0 20px #fff,
+    0 0 40px #0ff,
+    0 0 80px #0ff,
+    0 0 90px #0ff,
+    0 0 100px #0ff,
+    0 0 150px #0ff;  
+    background-color: transparent;
+    border: none;
+}
+
+.shopping-list-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+}
+
+.shopping-list-form input {
+color: #0ff;
+background-color: black;
 }
